# corgiml

./: .gitignore  corgiml.opam  dune-project
lib/: ast.ml  dune  env.ml  error.ml  eval.ml  js.ml  js_codegen.ml  json.ml  lexer.ml  match.ml  parse.ml  parser.ml  token.ml  type.ml  typecheck.ml  typing.ml
test/: dune  test.cml
