(lang dune 3.17)

(name corgiml)

(generate_opam_files true)

(source
 (github jyguzman/corgiml))

(authors "Jordie Guzman <jordieyguzman@gmail.com>")

(maintainers "Jordie Guzman <jordieyguzman@gmail.com>")

(license LICENSE)

(documentation https://github.com/jyguzman/corgiml)

(package
 (name corgiml)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
